tools/shook/src/snapshots/shook__config__tests__missing_required_field_returns_error.snap
---
source: src/config.rs
expression: result.unwrap_err().to_string()
---
x TOML parse error at line 2, column 13
│   |
│ 2 |             [devop]
│   |             ^^^^^^^
│ missing field `token`
│
